@@ -23,6 +23,11 @@ Version 1.5.3+svn:
  * Miscellaneous and bug fixes:
    * Changed side_drop handling not to automaticaly assign AI for side if
      leader is dead (bug #12186)
+   * Changed the behavior of [modify_turns] value= to default to -1
+     (no turn limit) instead of 50 if an invalid string is passed instead
+     of a number.
+   * Fixed [modify_turns] giving the unwanted side-effect of changing
+     turn limit when only current= modifier was used.=
    * Removed the compiler work arounds for MSVC6.
    * Added some more compiler workarounds for MSVC9.
 
